# sanx

./: main.py  pyproject.toml
.temp/: test.csv
sanx/: app.py  paths.py
sanx/db/: __init__.py  db.sqlite3  models.py
sanx/logger/: utils.py
sanx/pages/: dashboard.py  dataforms.py  home.py  settings.py
sanx/web/: __init__.py  login.py  search.py  table.py
workspace/: t.py
